--- a/apps/templates/home.html
+++ b/apps/templates/home.html
@@ -3,19 +3,33 @@
   Home Page
 {% endblock %} 
 {% block content%}
+
+<style>
+body {
+  background-image: url("static/assets/img/bdsm.jpg") ;
+  background-size: 100%;
+  background-position: absolute;
+  /* justify-content: center;
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  padding: 0 20px;
+  text-align: center;
+  align-items: center; */
+}
+</style>
+
 <h1 align="center">
-
-
 
   <section class="py-7 mt-3">
     <div class="container">
       <div class="row justify-space-between text-center py-2">
         <div class="col-12 mx-auto">
           
-          <a href="hebrew" button type="button" class="btn bg-gradient-primary w-auto me-2">עברית</a>
-          <a href="russian" button type="button" class="btn bg-gradient-primary w-auto me-2">Русский</a>
-          <a href="english" button type="button" class="btn bg-gradient-primary w-auto me-2">English</a>
-          
+          <a href="hebrew.html" button type="button" class="btn bg-gradient-primary w-auto me-2">עברית</a>
+          <a href="russian.html" button type="button" class="btn bg-gradient-primary w-auto me-2">Русский</a>
+          <a href="english.html" button type="button" class="btn bg-gradient-primary w-auto me-2">English</a>
+         
         </div>
       </div>
     </div>
