--- a/apps/templates/home/russian.html
+++ b/apps/templates/home/russian.html
@@ -3,95 +3,103 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
 <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
 <link href="https://unpkg.com/soft-ui-design-system@1.0.1/assets/css/soft-design-system.min.css" rel="stylesheet" />
-<head>
-    <title>Russian</title>
-</head>
 
+{% extends 'layouts/base-fullscreen.html' %}
+{% block title %}
+Russian
+{% endblock %} 
+
+{% block content%}
 <body>
+  <div class="row mt-2">
+  <div class="mx-2 text-start">
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Бондаж (связывание)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Ролевые игры (унижение, наказание, тематичные игры)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Порка (хлыст, бич, кнут)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Электрические девайсы (зажимы на соски(ток), порка электро кнутом)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Игра в животное: раб-собака (выгул, кормление, игры)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Пояс верности     </label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Вибраторы, дилдо, массаж простаты</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Фистинг (рукой, дилдо)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Психологическое давление (унижение раба)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Золотой дождь (в рот, на тело раба)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Игровое удушение горла (ошейником или руками)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Осмотр раба на гинекологическом кресле</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Фиксация, мумификация (наручники, кандалы, затруднение дыхания)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Фут-фетиш (раб лижет ноги)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Принуждение и наказание</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Клетка</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Распятие на кресте</label>
       </div>
+  </div>
+  </div>
 
 </body>
+{% endblock %} 
