--- a/apps/templates/home/english.html
+++ b/apps/templates/home/english.html
@@ -3,95 +3,103 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
 <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
 <link href="https://unpkg.com/soft-ui-design-system@1.0.1/assets/css/soft-design-system.min.css" rel="stylesheet" />
-<head>
-    <title>English</title>
-</head>
 
+{% extends 'layouts/base-fullscreen.html' %}
+{% block title %}
+English
+{% endblock %} 
+
+{% block content%}
 <body>
+  <div class="row mt-2">
+  <div class="mx-2 text-start">
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Bondage</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Roleplay (humiliation, punishments, essentialism)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Spanking (crop, whip, knout)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Electric devices (nipple clamps, electro-shock crop)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Animal roleplay: dog-slave (walking, feeding, games)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Chastity belt</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Vibrator, dildo, prostate massage</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Fisting (by hand, dildo)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Sub space</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Golden shower (in mouth and body)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Breath control play (collar or hands)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Slave inspection on the gynecological chair</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Restraints, mummification (handcuffs, legcuffs, breathplay)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Foot fetishism (slave licks feet)</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Compulsion and punishment</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Cage</label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <input class="form-check-input" type="checkbox">
         <label class="form-check-label" for="flexCheckDefault">Crucifiction</label>
       </div>
+  </div>
+  </div>
 
 </body>
+{% endblock %} 
