--- a/apps/templates/home/navigation-navbars.html
+++ b/apps/templates/home/navigation-navbars.html
@@ -59,7 +59,7 @@
 <nav
   class="navbar navbar-expand-lg navbar-dark bg-gradient-dark z-index-3 py-3">
   <div class="container">
-    <a class="navbar-brand text-white" href="/" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
+    <a class="navbar-brand text-white" href="/index" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
       Soft UI Design System
     </a>
     <a href="https://appseed.us/ui-kit/soft-ui-design-system#pricingCard" class="btn btn-sm  bg-gradient-primary  btn-round mb-0 ms-auto d-lg-none d-block">Buy Now</a>
