--- a/apps/templates/layouts/base-fullscreen.html
+++ b/apps/templates/layouts/base-fullscreen.html
@@ -21,9 +21,7 @@ Coded by www.creative-tim.com
   <link rel="icon" type="image/png" href="/static/assets/img/favicon.png">
   <link rel="canonical" href="https://appseed.us/ui-kit/soft-ui-design-system"/>
   
-  <title>
-    Flask Soft UI Design System - {% block title %}{% endblock %} | AppSeed
-  </title>
+  <title>Latex Edem - {% block title %}{% endblock %}</title>
 
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
