--- a/apps/templates/home.html
+++ b/apps/templates/home.html
@@ -6,7 +6,7 @@
 
 <style>
 body {
-  background-image: url("static/assets/img/bdsm.jpg") ;
+  background-image: url("static/assets/img/bd.jpg") ;
   background-size: 100%;
   background-position: absolute;
   /* justify-content: center;
